--- a/React project code along - NET Ninja/dojo-blog/src/index.css
+++ b/React project code along - NET Ninja/dojo-blog/src/index.css
@@ -52,3 +52,21 @@
 .blog-preview a{
   text-decoration: none;
 }
+
+/*blog details*/
+.blog-details h2{
+  font-size: 20px;
+  color:#f1356d;
+  margin-bottom: 10px;
+}
+.blog-details div{
+  margin:20px 0;
+}
+.blog-details button{
+  background-color: #f1356d;
+  color: #f2f2f2;
+  border :0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor:pointer;
+}
